--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-store": "^0.4.1",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.2",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
